Removed modal overflow issue

--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ td {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0,0,0,0.4);
 }
 
